--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   gtag('config', 'G-9KH2CB189J');
 </script>
+    
+<script src="https://s3.eu-north-1.amazonaws.com/prod.lyftio/225736/dist/bundle.js"></script>
+    
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
