--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   gtag('config', 'G-9KH2CB189J');
 </script>
     
-<script src="https://s3.eu-north-1.amazonaws.com/prod.lyftio/225736/dist/bundle.js"></script>
+<script src="https://cdn.lyftio.com/225736/dist/bundle.js"></script>
     
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
